20220207 임태주 놀아주세요 UI/UX 개발

--- a/html/default/header.html
+++ b/html/default/header.html
@@ -12,7 +12,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 <body>
     <!--Header 시작-->
-    <div class="header_wrap bg_green w_100">
+    <div class="header_wrap w_100 bd_b1">
         <div class="btn_wrap flex flex_vc space_between p_tb15 p_lr20 white font_24">
             <div class="home_btn">
                 <i class="fas fa-angle-left"></i>
